# security-engineering-platform-correct

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: DEPLOYMENT.md
scripts/: package-web.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: app.js
web/: README.md  index.html
web/config/: platform.config.json  theme.json
web/css/: styles.css
web/data/: dashboard_payload.json  synthetic_dashboard_payload.json
web/js/: app.js  default-data.js
