[package]
name = "security_engineering_platform"
version = "0.2.0"
description = "Security Engineering Intelligence Platform"
authors = ["Security Engineering"]
edition = "2021"

[lib]
name = "security_engineering_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
